# SonarQubeTest

./: setup.cfg  sonar-project.properties  tox.ini
src/lambda/calc/: lambda_function.py  test_lambda_function.py
test/: test_lambda_function.py
