[metadata]
name = calc
description = calc created by krupal
author = Krupal Patel
license = GU
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    calc
install_requires =
    requests>=2
python_requires = >=3.11
package_dir =
    =src/lambda
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    tox>=3.24

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160